--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 	</main>
 	<footer>
 		<p class="text">
-			Текст статьи взят <a href="https://postnauka.ru/wtf/156958" target="_blanc" class="link">сайта Пост
+			Текст статьи взят <a href="https://postnauka.ru/wtf/156958" target="blanc" class="link">сайта Пост
 				Науки</a>
 		</p>
 	</footer>
